--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ addons:
     update:
     - true
 before_script:
-  - sudo apt-get install openjdk-8-jre openjdk-8-jdk
+  - sudo apt-get update
+  - sudo apt-get upgrade
+  - sudo apt-get install default-jdk
   - sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip
   - mkdir -p ~/bin
   - curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
