--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ addons:
     update:
     - true
 before_script:
-  - sudo apt-get install default-jdk
-  - sudo apt-get install git-core gnupg flex bison gperf build-essential zip curl zlib1g-dev gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc unzip
+  - sudo apt-get install gperf gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc
   - mkdir -p ~/bin
   - curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
   - chmod a+x ~/bin/repo
@@ -19,8 +18,6 @@ script:
   - repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-8.0
   - repo sync --force-sync -j32
   - git clone https://github.com/algphello/honor_atomu_twrp.git -b omni-8.0 device/honor/atomu
-  - source build/envsetup.sh
-  - lunch omni_atomu-eng
   - export ALLOW_MISSING_DEPENDENCIES=true
   - export LC_ALL=C
   - source build/envsetup.sh
