--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ addons:
     update:
     - true
 before_script:
-  - sudo apt install -y openjdk-11-jdk
+  - sudo apt-get install openjdk-11-jdk
+  - sudo update-alternatives --install /usr/bin/java java /usr/lib/jvm/jdk-11.0.1/bin/java 1
+  - sudo update-alternatives --install /usr/bin/javac javac /usr/lib/jvm/jdk-11.0.1/bin/javac 1
   - sudo apt-get install gperf gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc
   - mkdir -p ~/bin
   - curl https://storage.googleapis.com/git-repo-downloads/repo > ~/bin/repo
