--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
-dist: bionic
+dist: xenial
 sudo: required
+
+jdk:
+   - openjdk11
+   - oraclejdk11
 git:
   depth: 3
 
@@ -18,6 +22,8 @@ script:
   - repo init --depth=1 -u git://github.com/minimal-manifest-twrp/platform_manifest_twrp_omni.git -b twrp-8.0
   - repo sync --force-sync -j32
   - git clone https://github.com/algphello/honor_atomu_twrp.git -b omni-8.0 device/honor/atomu
+  - source build/envsetup.sh
+  - lunch omni_atomu-eng
   - export ALLOW_MISSING_DEPENDENCIES=true
   - export LC_ALL=C
   - source build/envsetup.sh
