--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 dist: xenial
 sudo: required
-
-jdk:
-   - openjdk11
-   - oraclejdk11
 git:
   depth: 3
 
@@ -11,6 +7,8 @@ addons:
   apt:
     update:
     - true
+    packages:
+    - oracle-java11-installer
 before_script:
   - sudo apt-get install gperf gcc-multilib g++-multilib libc6-dev-i386 lib32ncurses5-dev x11proto-core-dev libx11-dev lib32z-dev libgl1-mesa-dev libxml2-utils xsltproc
   - mkdir -p ~/bin
